# CIR

./: .env.example  .gitignore  Cargo.toml  log.yaml
frontend/: index.html
migrations/2018-10-22-063614_create_users_table/: up.sql
migrations/2018-11-12-181119_create_groups_table/: down.sql  up.sql
migrations/2018-11-12-181308_create_group_users_table/: down.sql  up.sql
migrations/2018-11-12-181523_create_roles_table/: down.sql  up.sql
migrations/2018-11-12-181821_create_user_roles_table/: down.sql  up.sql
src/: build_info.rs  main.rs
src/db/: db_actor.rs  mod.rs  schema.rs
src/db/models/: group.rs  mod.rs  user.rs
src/error/: error_middleware.rs  mod.rs
src/web/: mod.rs  web_frontend.rs
src/web/controllers/: users.rs
src/web/graphql/: controllers.rs  graphql_actor.rs  mod.rs  schema.rs
