[package]
name = "cir-central"
version = "0.1.0"
authors = ["Dark_eye <dark.eye9@gmail.com>"]
build = "build.rs"

[dependencies]
actix-web = "0.7.13"
actix = "0.7.6"
diesel = { version = "1.3.3", features = ["mysql", "chrono", "r2d2"] }
dotenv = "0.13.0"
chrono = { version = "0.4.6", features = ["serde"] }
r2d2 = "0.8.3"
serde = "1.0.80"
serde_derive = "1.0.80"
futures = "0.1.25"
log4rs = "0.8.1"
log = "0.4.6"
lazy_static = "1.2.0"
failure = "0.1.3"
bytes = "0.4.10"

[build-dependencies]
built = "0.3.0"
